===============================================================
Tag name:  rtm1_0_36
Originator(s): tcraig
Date: Dec 27, 2013
One-line Summary: fix multi instance hybrid/branch filenames

M       bld/rtm.buildnml.csh

===============================================================
Tag name:  rtm1_0_35
Originator(s): tcraig
Date: Oct 28, 2013
One-line Summary: fix rtm namelist for initial files set from the REFCASE

M       bld/rtm.buildnml.csh

===============================================================
Tag name:  rtm1_0_34
Originator(s): mvertens
Date: Oct 2, 2013
One-line Summary: removed mct2esmf calls from rof_comp_esmf.F90

M       src/cpl/rof_comp_esmf.F90

===============================================================
Tag name:  rtm1_0_33
Originator(s): mvertens
Date: Sep 25, 2013
One-line Summary: Coupler interface refactor

migration of cpl_share/, cpl_esmf/ and cpl_mct code into 
new cpl/ and introduction of rof_import_export.F90

M       bld/rtm.buildexe.csh
D       src/cpl_share
D       src/cpl_share/rtm_cpl_indices.F90
D       src/cpl_mct
D       src/cpl_mct/rof_comp_mct.F90
D       src/cpl_esmf
D       src/cpl_esmf/rof_comp_mct.F90
D       src/cpl_esmf/rof_comp_esmf.F90
A  +    src/cpl
A  +    src/cpl/rof_comp_mct.F90
A  +    src/cpl/rof_comp_esmf.F90
A  +    src/cpl/rtm_cpl_indices.F90
A  +    src/cpl/rof_import_export.F90

===============================================================
Tag name:  rtm1_0_32
Originator(s): muszala
Date: Sep 19, 2013
One-line Summary: fix fthresh bug and refactor RtmFloodInit

runoff%fthresh was passed via argument list but then used
within RtmFloodInit.  Fix initialization of some runoff fields.
Refactor RtmFloodInit so that everything is passed via argument
list.  Move global use statements so that they are local.

M       src/riverroute/RtmMod.F90
M       src/riverroute/RunoffMod.F90

===============================================================
Tag name:  rtm1_0_31
Originator(s): tcraig
Date: Sep 5, 2013